# Vaxe2D

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
source/: main.cpp
source/apps/: app_chip8.cpp  app_chip8.h  app_first.cpp  app_first.h  app_gb.cpp  app_gb.h  app_nes.cpp  app_nes.h  app_pico8.cpp  app_pico8.h  app_second.cpp  app_second.h  vApplication.h
source/bus/: BUS_nes.cpp  BUS_nes.h  vBus.h
source/core/: vFramebuffer.cpp  vFramebuffer.h  vMemory.cpp  vMemory.h  vPalette.h  vRenderer.cpp  vRenderer.h  vWindow.cpp  vWindow.h
source/cpu/: CPU_olc6502.cpp  CPU_olc6502.h  vCPU.h
source/editor/: vEditor.cpp  vEditor.h
source/entity/: imguiFuncs.h  vComponent.h  vEntity.cpp  vEntity.h  vScene.cpp  vScene.h
source/filesystem/: vDirectory.h  vFile.h  vProject.cpp  vProject.h
source/layers/: layer_dock.cpp  layer_dock.h  layer_example.cpp  layer_example.h  layer_filesystem.cpp  layer_filesystem.h  layer_hierarchy.cpp  layer_hierarchy.h  layer_properties.cpp  layer_properties.h  vLayer.h
source/types/: vByte1.h  vByte16.h  vByte2.h  vByte32.h  vByte4.h  vByte8.h  vTexture.cpp  vTexture.h
